fix UI jump because of scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@ body {
 }
 /* Width */
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 0;
 }
 
 /* Track */
